--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,71 +89,82 @@
                     android:text="@string/start_search" />
 
                 <Button
+                    android:id="@+id/btn_mode_caiyang"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:text="@string/mode_caiyang" />
+
+                <Button
+                    android:id="@+id/btn_pinlv_caiyang"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_weight="1"
+                    android:text="@string/pinlv_caiyang" />
+
+                <Button
                     android:id="@+id/btn_show_pin"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_weight="1"
-                    android:text="@string/show_pin" />
-                <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:padding="10dp" />-->
+                    android:text="@string/show_pin"
+                    android:visibility="gone" />
+
                 <Button
                     android:id="@+id/btn_clean_screen"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_weight="1"
-                    android:text="@string/clean_screen" />
-
-                <Button
-                    android:id="@+id/btn_start_collection"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-
-                    android:text="@string/start_collection" />
+                    android:text="@string/clean_screen"
+                    android:visibility="gone" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:layout_marginTop="5dp"
                 android:orientation="horizontal">
 
-                <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:padding="10dp" />-->
+                <Button
+                    android:id="@+id/btn_start_collection"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/start_collection" />
+
                 <Button
                     android:id="@+id/btn_end_collection"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:layout_weight="1"
                     android:text="@string/end_collection" />
-                <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:padding="10dp" />-->
+
                 <Button
                     android:id="@+id/btn_start_uploading"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_weight="1"
-                    android:text="@string/start_uploading" />
+                    android:text="@string/start_uploading"
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/btn_end_uploading"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/end_uploading" />
+                    android:text="@string/end_uploading"
+                    android:visibility="gone" />
 
                 <Button
                     android:id="@+id/btn_delete_data"
@@ -167,20 +178,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:padding="10dp" />-->
-
-
-                <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:padding="10dp" />-->
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <Button
                     android:id="@+id/btn_device_status"
@@ -191,18 +190,13 @@
                     android:text="@string/device_status" />
 
                 <Button
+
                     android:id="@+id/btn_select_dev"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_weight="1"
                     android:text="@string/select_dev" />
-
-                <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:padding="10dp" />-->
 
                 <Button
                     android:id="@+id/btn_select_dir"
@@ -213,19 +207,12 @@
                     android:text="@string/select_dir" />
             </LinearLayout>
 
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:orientation="horizontal">
-
-
-                <!--<TextView-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_gravity="center_horizontal"-->
-                <!--android:padding="10dp" />-->
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <Button
                     android:id="@+id/btn_start_save"
@@ -235,21 +222,6 @@
                     android:layout_weight="1"
                     android:text="@string/start_save" />
 
-                <Button
-                    android:id="@+id/btn_mode_caiyang"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_weight="1"
-                    android:text="@string/mode_caiyang" />
-
-                <Button
-                    android:id="@+id/btn_pinlv_caiyang"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:layout_weight="1"
-                    android:text="@string/pinlv_caiyang" />
             </LinearLayout>
 
         </LinearLayout>
