--- a/app/src/main/res/layout/adapter_device.xml
+++ b/app/src/main/res/layout/adapter_device.xml
@@ -99,7 +99,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:text="@string/enter"
-                android:textSize="12sp" />
+                android:textSize="12sp"
+                android:visibility="gone" />
 
         </LinearLayout>
 
