--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,7 +86,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_weight="1"
+                    android:layout_weight="0.75"
                     android:text="@string/start_search" />
 
                 <Button
@@ -94,9 +94,10 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="7dp"
                     android:layout_weight="1"
+                    android:singleLine="true"
                     android:text="@string/mode_caiyang" />
 
                 <Button
